--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,8 @@
 
 <resources>
     <style name="Theme.Main" parent="@android:style/Theme.Material.Light.DarkActionBar">
-        <item name="android:colorPrimary">@color/theme_primary</item>
-        <item name="android:colorPrimaryDark">@color/theme_primary_dark</item>
+        <item name="android:colorPrimary">@color/theme_primary_dark</item>
+        <item name="android:colorPrimaryDark">@color/theme_primary</item>
         <item name="android:colorAccent">@color/theme_accent</item>
         <!-- Redefine the ActionBar style for contentInsetStart -->
         <item name="android:actionBarStyle">@style/Theme.ActionBar.SubSettings</item>
